Fix overflow when image on div is scaled

--- a/style.css
+++ b/style.css
@@ -98,6 +98,7 @@
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    overflow: hidden;
 }
 
 #budaya .container div {
@@ -153,6 +154,7 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    overflow: hidden;
 }
 
 #fasilitas .container div {
@@ -161,11 +163,14 @@
     padding: 15px;
     border-radius: 12px;
     background-color:rgb(157, 212, 155);
-    margin-right: 20px;
+    margin-right: 30px;
     margin-bottom: 30px;
+    transform: scale(1);
+    transition: .3s ease-in-out;
 }
 
-#fasilitas div:hover {
+#fasilitas .container div:hover {
+    transform: scale(1.1);
 }
 /* End Fasilitas */
 
@@ -185,7 +190,7 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    margin-top: 20px;
+    overflow: hidden;
 }
 
 #wisata .container div {
@@ -193,11 +198,14 @@
     padding: 15px;
     border-radius: 12px;
     margin-bottom: 30px;
-    margin-right: 20px;
+    margin-right: 30px;
     background-color:rgb(176, 255, 173);
+    transform: scale(1);
+    transition: .3s ease-in-out;
 }
 
-#wisata div:hover {
+#wisata .container div:hover {
+    transform: scale(1.1);
 }
 
 #wisata button {
@@ -429,6 +437,11 @@
     
     /* Budaya */
     #budaya {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-top: 5%;
         padding: 0 20px;
         text-align: center;
     }
@@ -451,10 +464,12 @@
     
     #budaya .container div {
         width: 45%;
-        background-color: rgb(176, 255, 173);
         font-size: 16px;
         padding: 15px;
         border-radius: 12px;
+        background-color:rgb(157, 212, 155);
+        margin-right: 20px;
+        margin-bottom: 30px;
     }
 
     #budaya button {
